--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "babel-loader": "^8.0.5",
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "redux-form": "^8.2.0"
   }
 }
