--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
+    "redux-act": "^1.7.4",
+    "redux-actions": "^2.6.5",
     "redux-persist": "^5.10.0",
     "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0",
